[package]
name = "eth-keygen"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive", "env", "unicode", "wrap_help"] }
hex = "0.4.3"
iocore = "0.111.0"
rand_jitter = { version = "0.4.0", features = ["std"] }
secp256k1 = { version = "0.28.2", features = ["rand", "std", "rand-std", "serde"] }
serde = { version = "1.0.196", features = ["derive", "serde_derive", "alloc"] }
serde_json = { version = "1.0.113", features = ["preserve_order", "alloc", "float_roundtrip"] }
tiny-keccak = { version = "1.5" }
web3 = "0.19.0"


[[bin]]
name = "eth-keygen"
path = "src/main.rs"
bench = false

[lib]
name = "eth_keygen"
path = "src/lib.rs"
